--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
   
   <div class="text-center">
     <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="200" height="45" title="daftar" alt="tombol_daftar"></a>
+      <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="280" height="80" title="daftar" alt="tombol_daftar"></a>
   </div>
   
   <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
@@ -555,7 +555,7 @@
 
   <div class="text-center">
     <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
+      <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="280" height="80" title="daftar" alt="tombol_daftar"></a>
   </div> <br/>
   <br/>
 
@@ -565,7 +565,7 @@
 
   <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
      <div class="text-center">
-       <img class="d-block w-100 embed-responsive" src="https://lh3.googleusercontent.com/REY7FXbg2HO6of6a3VhNsge17NacZqhkFqZkTHoGH3oblN9Gej6hJmoToTcmo0aCXpFDfVz_tgrdah69OIR25Yvu7XNEccrxp-DQhLEdgA2oZi43Dw=w773" alt="satu-lisensi">
+       <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/satu-lisensi.jpg" alt="satu-lisensi">
      </div>
       <h5 style="text-align: center;">1 Lisensi</h5>
       <p style="text-align: center;">
@@ -573,11 +573,11 @@
       </p>
      <div class="text-center">
       <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://lh4.googleusercontent.com/SBPERlYBEjzGDhB9vcHClqPKF2IcBA1NuzjCYCBWVvcbXTGL_InfkjeI8A0TjW5HqdUdBxS_fw=w1175" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
+      <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
      </div> <br/>
      <br/>
      <div class="text-center">
-       <img class="d-block w-100 embed-responsive" src="https://lh5.googleusercontent.com/VWBGFXK8MgS8mel0Lo71TzeCmdLT3Uy4iOz5FJwDspVLxQvMOMbgY-6iOSn22SZXi5nGFr-k_706pLhzdkHujF_MFm5V2B1uGLDpeI-NVFvqdviwY2A=w773" alt="tiga-lisensi">
+       <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/tiga-lisensi.jpg" alt="tiga-lisensi">
      </div>
       <h5 style="text-align: center;">3 Lisensi</h5>
       <p style="text-align: center;">
@@ -585,7 +585,7 @@
       </p> <br/>
      <br/>
      <div class="text-center">
-       <img class="d-block w-100 embed-responsive" src="https://lh4.googleusercontent.com/DxgukGyaRHUcEphnv4imgS48a4XxwkUgnKYvv5atUuU1ysRAXNoGEQgYAqrC9X_gERy_5F2a-rnk2n7c31cUAlBJkMggKLLG54VEffwIX7g9fr4lF20=w974" alt="tujuh-lisensi">
+       <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/tujuh-lisensi.jpg" alt="tujuh-lisensi">
      </div>
       <h5 style="text-align: center;">7 Lisensi</h5>
       <p style="text-align: center;">
@@ -595,7 +595,7 @@
 
   <div class="text-center">
       <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://lh5.googleusercontent.com/rh2di3aQzq9j6x3RYr_9nYkUp0NhwalVPfat52bpcDtgjzt-xc970s7UqEDaSIi92H6vXkokgdvXdvk63tqaSlT9-T23j_3aCtqQIuYvvGDSRcDLCg=w1175" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
+      <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="280" height="80" title="daftar" alt="tombol_daftar"></a>
   </div>
 
   <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
