--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </div>
     
   
-  <div style="background-color: #7FFFD4; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+  <div class="text-white" style="background-color: #9370DB; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
     <h5>Manfaat Milagros</h5>
   </div>
   
@@ -334,7 +334,7 @@
     </div>
   </section>
   
-  <div class="arrow_box"><h5 style="text-align: center">LEGALITAS PRODUK</h5></div>
+  <div class="arrow_box"><h5 class="text-white" style="text-align: center; padding: 10px;">LEGALITAS PRODUK</h5></div>
   <br/>
   <br/>
     
@@ -423,7 +423,7 @@
       <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="280" height="80" title="daftar" alt="tombol_daftar"></a>
   </div>
   
-  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
+  <div style="background-color: #; border: 2px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
       <h5>PELUANG DAHSYAT MENJADI DISTRIBUTOR MILAGROS</h5>
   </div>
   
@@ -431,7 +431,7 @@
     <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/benefit.jpg" alt="benefit-milagros">
   </div>
   
-  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
+  <div style="background-color: #; border: 2px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
     <p>Saat bergabung besama kami di Milagros Miracle Water Anda siap-siap mendapatkan 5 benefit berikut sekaligus, <br/>
       <h5>Investasi Sekali Untuk Selamanya</h5>
           Untuk dapat melibatkan diri Anda ke dalam program “Milagros CRP”, Anda cukup mendaftarkan diri Anda satu kali saja dan keanggotaan Anda akan berlaku selamanya. <br/>
@@ -450,7 +450,7 @@
     </p>
   </div>
   
-  <div class="arrow_box"><h5 style="text-align: center">TESTIMONIALS</h5></div>
+  <div class="arrow_box"><h5 class="text-white" style="text-align: center; padding: 10px;">TESTIMONIALS</h5></div>
   <br/>
   <br/>
   
@@ -475,11 +475,11 @@
   </div>
   <br/>
   
-  <div class="arrow_box"><h5 style="text-align: center">Marketing Plan MILAGROS</h5></div>
+  <div class="arrow_box"><h5 class="text-white" style="text-align: center; padding: 10px;">Marketing Plan MILAGROS</h5></div>
   <br/>
   <br/>
   
-  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
+  <div style="background-color: #; border: 2px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
     <ol>
       <li>Bonus RO</li>
           <p>Bonus Eceran (Rp. 50.000)
@@ -559,11 +559,11 @@
   </div> <br/>
   <br/>
 
-  <div class="arrow_box"><h5 style="text-align: center">Tiga Pilihan Investasi Program Milagros</h5></div>
+  <div class="arrow_box"><h5 class="text-white" style="text-align: center; padding: 10px;">Tiga Pilihan Investasi Program Milagros</h5></div>
   <br/>
   <br/>
 
-  <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
+  <div style="background-color: #; border: 2px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: justify; width: auto;">
      <div class="text-center">
        <img class="d-block w-100 embed-responsive" src="https://raw.githubusercontent.com/agenmilagros/agenmilagros.github.io/master/img/satu-lisensi.jpg" alt="satu-lisensi">
      </div>
@@ -598,7 +598,7 @@
       <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="280" height="80" title="daftar" alt="tombol_daftar"></a>
   </div>
 
-  <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+  <div style="background-color: #; border: 2px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
       <p>
         Bergabunglah menjadi agen MILAGROS INDONESIA. Rasakan Manfaatnya dan Jalankan Bisnisnya, Kesehatan dan Kesuksesan Besar Akan Anda Nikmati.
       </p>
@@ -658,7 +658,7 @@
     </div>
   </section>
 
-  <div style="background-color: #F5F5DC; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+  <div style="background-color: #; border: 2px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
       <p>
         Segera ambil peluang ini dan dapatkan penghasilan yang Anda inginkan tanpa menunggu bertahun-tahun!
       </p>
@@ -666,7 +666,7 @@
 
   <div class="text-center">
       <a href="https://wa.orderlink.in/no/6289674198193">
-      <img src="https://lh5.googleusercontent.com/rh2di3aQzq9j6x3RYr_9nYkUp0NhwalVPfat52bpcDtgjzt-xc970s7UqEDaSIi92H6vXkokgdvXdvk63tqaSlT9-T23j_3aCtqQIuYvvGDSRcDLCg=w1175" width="280" height="88" title="daftar" alt="tombol_daftar"></a>
+      <img src="https://raw.githubusercontent.com/paytrenindramayu/paytrenindramayu.github.io/master/img/wa.gif" width="280" height="80" title="daftar" alt="tombol_daftar"></a>
   </div>
 
   <!--    //////////////////////////// Call to Action ////////////////////////////////   -->
@@ -692,7 +692,7 @@
         </div>
         -->
         <div class="col-xl-9 mx-auto">
-        <div style="background-color: #; border: 1px dashed #17202A; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
+        <div style="background-color: #; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
           <p>
             Nama: Virgin Shofwa <br/>
             Kota: Indramayu <br/>
