--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Peluang usaha agen air alkali ajaib milagros yang sangat diminati, miliki peluang bisnis ini dapatkan semua benefit serta penghasilan sebesar yang Anda inginkan.">
   <meta name="author" content="">
 
-  <title>Landing Page Milagros</title>
+  <title>Pendaftaran Agen Resmi Milagros | Patrol, Indramayu</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -695,7 +695,7 @@
         <div style="background-color: #; border: 2px dashed #FFFAFA; height: auto; margin: 10px 0px; padding: 10px; text-align: center; width: auto;">
           <p>
             Nama: Virgin Shofwa <br/>
-            Kota: Indramayu <br/>
+            Kota: Patrol, Indramayu <br/>
             WA: 089674198193
           </p>
         </div>
@@ -732,7 +732,7 @@
              Semua yang kami informasikan mengacu pada Web Official, 
              jika ada perbedaan informasi maka yang menjadi acuan adalah apa yang dijelaskan pada Official Website Perusahaan.</i> <br/>
              <br/>
-             <u>Anda Member Produk/ Bisnis Ini? KLIK DISINI</u>
+             <!-- <u>Anda Member Produk/ Bisnis Ini? KLIK DISINI</u> -->
           </p>
           <p class="text-muted small mb-4 mb-lg-0">&copy; agenmilagros.github.io 2019. All Rights Reserved.</p>
         </div>
