--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Peluang usaha agen air alkali ajaib milagros yang sangat diminati, miliki peluang bisnis ini dapatkan semua benefit serta penghasilan sebesar yang Anda inginkan.">
   <meta name="author" content="">
+  <meta name="google-site-verification" content="3yNtNLnSFV76KfwclVwyZ9i55wEOq_T7dw16AjwuNLs" />
 
   <title>Pendaftaran Agen Resmi Milagros | Patrol, Indramayu</title>
 
